Categoria Insert Post

--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.justino</groupId>
-	<artifactId>cursomc</artifactId>
+	<artifactId>spring-boot-ionic-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cursomc</name>
-	<description>Demo project for Spring Boot</description>
+	<name>spring-boot-ionic-backend</name>
+	<description>spring-boot-ionic-backend</description>
 
 	<properties>
 		<java.version>11</java.version>
