Envio de email via smtp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 default.sender=carlos.justino08@gmail.com
 default.recipient=carlos.justino08@gmail.com
