adicionado senha no cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 default.sender=carlos.justino08@gmail.com
 default.recipient=carlos.justino08@gmail.com
