--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.profiles.active=test
 
 default.sender=carlos.justino08@gmail.com
 default.recipient=carlos.justino08@gmail.com
+
+
+jwt.secret=justino-backendSequenciaCaracterParaASsinarToken
+jwt.expiration=60000
