Autorizacao com JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ default.recipient=carlos.justino08@gmail.com
 
 
 jwt.secret=justino-backendSequenciaCaracterParaASsinarToken
-jwt.expiration=60000
+jwt.expiration=3000000
