--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ aws.access_key_id=AKIA5TRRRVKIEWOHLE3G
 aws.secret_access_key=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
 s3.bucket=curso-spring-ionic-justino
 s3.region=sa-east-1
+
+img.prefix.client.profile=cp
