--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-spring.profiles.active=test
+spring.profiles.active=
 
-default.sender=carlos.justino08@gmail.com
-default.recipient=carlos.justino08@gmail.com
+default.sender=
+default.recipient=
 
 
-jwt.secret=justino-backendSequenciaCaracterParaASsinarToken
+jwt.secret=
 jwt.expiration=86400000
 
 
-aws.access_key_id=AKIA5TRRRVKIEWOHLE3G
-aws.secret_access_key=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
-s3.bucket=curso-spring-ionic-justino
-s3.region=sa-east-1
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=
+s3.region=
 
-img.prefix.client.profile=cp
-img.profile.size=200
+img.prefix.client.profile=
+img.profile.size=
