--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=mysql://b51e6a2c56b110:dc5f6ffc@us-cdbr-east-02.cleardb.com/heroku_5333fbfe5dbbed3?reconnect=true
+spring.datasource.url=
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
